Update swagger field description tags
