# docs/swagger.json
@@ -29,13 +29,16 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.LoginUserDto"
+                            "$ref": "#/definitions/models.LoginUserDto"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
+                        }
                     },
                     "400": {
                         "description": "Неправильные логин или пароль"
@@ -63,15 +66,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repository.RegisterUserDto"
+                            "$ref": "#/definitions/models.RegisterUserDto"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Пользователь зарегистрирован",
                         "schema": {
-                            "$ref": "#/definitions/repository.RegisterResponse"
+                            "$ref": "#/definitions/models.RegisterResponse"
                         }
                     },
                     "400": {
@@ -82,8 +85,40 @@
         }
     },
     "definitions": {
-        "repository.LoginUserDto": {
+        "models.LoginResponse": {
             "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string",
+                    "enum": [
+                        "Male",
+                        " Female",
+                        " Unknown"
+                    ]
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginUserDto": {
+            "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
             "properties": {
                 "login": {
                     "type": "string"
@@ -93,7 +128,7 @@
                 }
             }
         },
-        "repository.RegisterResponse": {
+        "models.RegisterResponse": {
             "type": "object",
             "properties": {
                 "banned": {
@@ -117,6 +152,11 @@
                 },
                 "role": {
                     "type": "string",
+                    "enum": [
+                        "User",
+                        " Admin",
+                        " SuperAdmin"
+                    ],
                     "example": "USER"
                 },
                 "verified": {
@@ -124,10 +164,12 @@
                 }
             }
         },
-        "repository.RegisterUserDto": {
+        "models.RegisterUserDto": {
             "type": "object",
             "required": [
+                "age",
                 "email",
+                "gender",
                 "login",
                 "name",
                 "password"
@@ -138,11 +180,17 @@
                     "example": 5
                 },
                 "email": {
+                    "description": "E",
                     "type": "string",
                     "example": "test@email.com"
                 },
                 "gender": {
                     "type": "string",
+                    "enum": [
+                        "Male",
+                        " Female",
+                        " Unknown"
+                    ],
                     "example": "Female"
                 },
                 "login": {
